Fix: splash was stuck at the top of the page.

--- a/css/custom.css
+++ b/css/custom.css
@@ -8,7 +8,7 @@
 
 #splash {
   background-color: black;
-  position: absolute;
+  position: fixed;
   z-index: 10001;
   height: 100%;
   width: 100%;
